--- a/output.css
+++ b/output.css
@@ -18,6 +18,8 @@
     --container-md: 28rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --text-lg: 1.125rem;
+    --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
@@ -42,6 +44,7 @@
     --color-verde-200: #ACEF75;
     --color-verde-300: #91EE77;
     --color-verde-400: #17E880;
+    --color-verde-700: #2E482C;
     --color-verde-800: #16281F;
     --color-verde-900: #0F1C15;
     --color-verde-950: #030504;
@@ -202,14 +205,26 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
+  .start-0 {
+    inset-inline-start: calc(var(--spacing) * 0);
+  }
   .-left-1 {
     left: calc(var(--spacing) * -1);
   }
   .-z-10 {
     z-index: calc(10 * -1);
   }
+  .col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+  .col-span-2 {
+    grid-column: span 2 / span 2;
+  }
   .col-span-full {
     grid-column: 1 / -1;
+  }
+  .row-span-1 {
+    grid-row: span 1 / span 1;
   }
   .row-span-2 {
     grid-row: span 2 / span 2;
@@ -251,6 +266,12 @@
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
+  .mt-12 {
+    margin-top: calc(var(--spacing) * 12);
+  }
+  .mt-16 {
+    margin-top: calc(var(--spacing) * 16);
+  }
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
   }
@@ -259,6 +280,9 @@
   }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
+  }
+  .mb-6 {
+    margin-bottom: calc(var(--spacing) * 6);
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
@@ -317,6 +341,9 @@
   .w-full {
     width: 100%;
   }
+  .max-w-40 {
+    max-width: calc(var(--spacing) * 40);
+  }
   .max-w-screen {
     max-width: 100vw;
   }
@@ -342,6 +369,9 @@
   .resize {
     resize: both;
   }
+  .resize-none {
+    resize: none;
+  }
   .snap-x {
     scroll-snap-type: x var(--tw-scroll-snap-strictness);
   }
@@ -350,6 +380,9 @@
   }
   .snap-center {
     scroll-snap-align: center;
+  }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -366,6 +399,12 @@
   .flex-col {
     flex-direction: column;
   }
+  .flex-col-reverse {
+    flex-direction: column-reverse;
+  }
+  .flex-row {
+    flex-direction: row;
+  }
   .flex-wrap {
     flex-wrap: wrap;
   }
@@ -381,11 +420,17 @@
   .items-start {
     align-items: flex-start;
   }
+  .justify-around {
+    justify-content: space-around;
+  }
   .justify-between {
     justify-content: space-between;
   }
   .justify-center {
     justify-content: center;
+  }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -393,8 +438,20 @@
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
+  }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
+  }
+  .gap-12 {
+    gap: calc(var(--spacing) * 12);
+  }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
+  }
+  .gap-40 {
+    gap: calc(var(--spacing) * 40);
   }
   .space-y-4 {
     :where(& > :not(:last-child)) {
@@ -414,6 +471,11 @@
   .divide-verde-800 {
     :where(& > :not(:last-child)) {
       border-color: var(--color-verde-800);
+    }
+  }
+  .divide-verde-900 {
+    :where(& > :not(:last-child)) {
+      border-color: var(--color-verde-900);
     }
   }
   .self-end {
@@ -458,6 +520,55 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-t-1 {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 1px;
+  }
+  .border-t-2 {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 2px;
+  }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
+  .border-b-1 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
+  .border-b-2 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 2px;
+  }
+  .border-b-22 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 22px;
+  }
+  .border-verde-700 {
+    border-color: var(--color-verde-700);
+  }
+  .border-verde-900 {
+    border-color: var(--color-verde-900);
+  }
+  .border-verde-950 {
+    border-color: var(--color-verde-950);
+  }
+  .border-t-verde-900 {
+    border-top-color: var(--color-verde-900);
+  }
+  .border-t-verde-950 {
+    border-top-color: var(--color-verde-950);
+  }
+  .border-b-verde-900 {
+    border-bottom-color: var(--color-verde-900);
+  }
+  .border-b-verde-950 {
+    border-bottom-color: var(--color-verde-950);
   }
   .bg-\[url\] {
     background-color: url;
@@ -558,6 +669,9 @@
   .object-cover {
     object-fit: cover;
   }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
@@ -582,6 +696,9 @@
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
+  .px-20 {
+    padding-inline: calc(var(--spacing) * 20);
+  }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
@@ -597,8 +714,14 @@
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
   }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
+  }
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
+  }
+  .py-20 {
+    padding-block: calc(var(--spacing) * 20);
   }
   .pt-16 {
     padding-top: calc(var(--spacing) * 16);
@@ -608,6 +731,9 @@
   }
   .pr-1 {
     padding-right: calc(var(--spacing) * 1);
+  }
+  .pr-2 {
+    padding-right: calc(var(--spacing) * 2);
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
@@ -626,6 +752,9 @@
   }
   .text-start {
     text-align: start;
+  }
+  .align-top {
+    vertical-align: top;
   }
   .font-sans {
     font-family: var(--font-sans);
@@ -652,6 +781,10 @@
   .text-6xl {
     font-size: var(--text-6xl);
     line-height: var(--tw-leading, var(--text-6xl--line-height));
+  }
+  .text-lg {
+    font-size: var(--text-lg);
+    line-height: var(--tw-leading, var(--text-lg--line-height));
   }
   .text-sm {
     font-size: var(--text-sm);
@@ -725,6 +858,10 @@
   .opacity-0 {
     opacity: 0%;
   }
+  .shadow-xl {
+    --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
@@ -764,6 +901,10 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
+  .outline-none {
+    --tw-outline-style: none;
+    outline-style: none;
+  }
   .\*\:col-start-1 {
     :is(& > *) {
       grid-column-start: 1;
@@ -774,9 +915,21 @@
       grid-row-start: 1;
     }
   }
+  .\*\:my-8 {
+    :is(& > *) {
+      margin-block: calc(var(--spacing) * 8);
+    }
+  }
   .\*\:flex {
     :is(& > *) {
       display: flex;
+    }
+  }
+  .\*\:\*\:max-h-8 {
+    :is(& > *) {
+      :is(& > *) {
+        max-height: calc(var(--spacing) * 8);
+      }
     }
   }
   .\*\:items-center {
@@ -789,9 +942,54 @@
       gap: calc(var(--spacing) * 4);
     }
   }
+  .\*\:p-4 {
+    :is(& > *) {
+      padding: calc(var(--spacing) * 4);
+    }
+  }
+  .\*\:p-6 {
+    :is(& > *) {
+      padding: calc(var(--spacing) * 6);
+    }
+  }
+  .\*\:p-8 {
+    :is(& > *) {
+      padding: calc(var(--spacing) * 8);
+    }
+  }
+  .\*\:p-10 {
+    :is(& > *) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
+  .\*\:p-12 {
+    :is(& > *) {
+      padding: calc(var(--spacing) * 12);
+    }
+  }
+  .\*\:p-20 {
+    :is(& > *) {
+      padding: calc(var(--spacing) * 20);
+    }
+  }
   .\*\:px-4 {
     :is(& > *) {
       padding-inline: calc(var(--spacing) * 4);
+    }
+  }
+  .\*\:px-8 {
+    :is(& > *) {
+      padding-inline: calc(var(--spacing) * 8);
+    }
+  }
+  .\*\:px-12 {
+    :is(& > *) {
+      padding-inline: calc(var(--spacing) * 12);
+    }
+  }
+  .\*\:px-20 {
+    :is(& > *) {
+      padding-inline: calc(var(--spacing) * 20);
     }
   }
   .\*\:py-2 {
@@ -828,6 +1026,16 @@
       @media (hover: hover) {
         opacity: 100%;
       }
+    }
+  }
+  .placeholder\:text-verde-900 {
+    &::placeholder {
+      color: var(--color-verde-900);
+    }
+  }
+  .placeholder\:text-verde-950 {
+    &::placeholder {
+      color: var(--color-verde-950);
     }
   }
   .hover\:w-10 {
@@ -876,9 +1084,98 @@
       }
     }
   }
+  .\*\:hover\:text-verde-400 {
+    :is(& > *) {
+      &:hover {
+        @media (hover: hover) {
+          color: var(--color-verde-400);
+        }
+      }
+    }
+  }
+  .focus\:border-verde-900 {
+    &:focus {
+      border-color: var(--color-verde-900);
+    }
+  }
+  .focus\:ring-2 {
+    &:focus {
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .focus\:ring-verde-400 {
+    &:focus {
+      --tw-ring-color: var(--color-verde-400);
+    }
+  }
+  .focus\:transition {
+    &:focus {
+      transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
+      transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+      transition-duration: var(--tw-duration, var(--default-transition-duration));
+    }
+  }
+  .focus\:outline-none {
+    &:focus {
+      --tw-outline-style: none;
+      outline-style: none;
+    }
+  }
+  .max-sm\:mt-4 {
+    @media (width < 40rem) {
+      margin-top: calc(var(--spacing) * 4);
+    }
+  }
+  .max-sm\:mb-4 {
+    @media (width < 40rem) {
+      margin-bottom: calc(var(--spacing) * 4);
+    }
+  }
   .max-sm\:mb-6 {
     @media (width < 40rem) {
       margin-bottom: calc(var(--spacing) * 6);
+    }
+  }
+  .max-sm\:mb-8 {
+    @media (width < 40rem) {
+      margin-bottom: calc(var(--spacing) * 8);
+    }
+  }
+  .max-sm\:flex-col {
+    @media (width < 40rem) {
+      flex-direction: column;
+    }
+  }
+  .max-sm\:flex-row {
+    @media (width < 40rem) {
+      flex-direction: row;
+    }
+  }
+  .max-sm\:gap-0 {
+    @media (width < 40rem) {
+      gap: calc(var(--spacing) * 0);
+    }
+  }
+  .max-sm\:gap-4 {
+    @media (width < 40rem) {
+      gap: calc(var(--spacing) * 4);
+    }
+  }
+  .max-sm\:divide-y-2 {
+    @media (width < 40rem) {
+      :where(& > :not(:last-child)) {
+        --tw-divide-y-reverse: 0;
+        border-bottom-style: var(--tw-border-style);
+        border-top-style: var(--tw-border-style);
+        border-top-width: calc(2px * var(--tw-divide-y-reverse));
+        border-bottom-width: calc(2px * calc(1 - var(--tw-divide-y-reverse)));
+      }
+    }
+  }
+  .max-sm\:p-2 {
+    @media (width < 40rem) {
+      padding: calc(var(--spacing) * 2);
     }
   }
   .max-sm\:px-4 {
@@ -889,6 +1186,44 @@
   .max-sm\:pt-12 {
     @media (width < 40rem) {
       padding-top: calc(var(--spacing) * 12);
+    }
+  }
+  .\*\:max-sm\:p-6 {
+    :is(& > *) {
+      @media (width < 40rem) {
+        padding: calc(var(--spacing) * 6);
+      }
+    }
+  }
+  .\*\:max-sm\:px-8 {
+    :is(& > *) {
+      @media (width < 40rem) {
+        padding-inline: calc(var(--spacing) * 8);
+      }
+    }
+  }
+  .\*\:max-sm\:not-last-of-type\:px-8 {
+    :is(& > *) {
+      @media (width < 40rem) {
+        &:not(*:last-of-type) {
+          padding-inline: calc(var(--spacing) * 8);
+        }
+      }
+    }
+  }
+  .sm\:col-span-1 {
+    @media (width >= 40rem) {
+      grid-column: span 1 / span 1;
+    }
+  }
+  .sm\:mt-16 {
+    @media (width >= 40rem) {
+      margin-top: calc(var(--spacing) * 16);
+    }
+  }
+  .sm\:mb-8 {
+    @media (width >= 40rem) {
+      margin-bottom: calc(var(--spacing) * 8);
     }
   }
   .sm\:mb-16 {
@@ -948,9 +1283,31 @@
       border-radius: calc(infinity * 1px);
     }
   }
+  .sm\:border-t-2 {
+    @media (width >= 40rem) {
+      border-top-style: var(--tw-border-style);
+      border-top-width: 2px;
+    }
+  }
+  .sm\:border-b-2 {
+    @media (width >= 40rem) {
+      border-bottom-style: var(--tw-border-style);
+      border-bottom-width: 2px;
+    }
+  }
   .sm\:bg-verde-950 {
     @media (width >= 40rem) {
       background-color: var(--color-verde-950);
+    }
+  }
+  .sm\:p-2 {
+    @media (width >= 40rem) {
+      padding: calc(var(--spacing) * 2);
+    }
+  }
+  .sm\:p-4 {
+    @media (width >= 40rem) {
+      padding: calc(var(--spacing) * 4);
     }
   }
   .sm\:p-8 {
@@ -958,9 +1315,19 @@
       padding: calc(var(--spacing) * 8);
     }
   }
+  .sm\:p-12 {
+    @media (width >= 40rem) {
+      padding: calc(var(--spacing) * 12);
+    }
+  }
   .sm\:py-1 {
     @media (width >= 40rem) {
       padding-block: calc(var(--spacing) * 1);
+    }
+  }
+  .sm\:py-8 {
+    @media (width >= 40rem) {
+      padding-block: calc(var(--spacing) * 8);
     }
   }
   .sm\:py-16 {
@@ -1007,6 +1374,41 @@
       transition-property: transform, translate, scale, rotate;
       transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
       transition-duration: var(--tw-duration, var(--default-transition-duration));
+    }
+  }
+  .\*\:sm\:p-6 {
+    :is(& > *) {
+      @media (width >= 40rem) {
+        padding: calc(var(--spacing) * 6);
+      }
+    }
+  }
+  .\*\:sm\:px-4 {
+    :is(& > *) {
+      @media (width >= 40rem) {
+        padding-inline: calc(var(--spacing) * 4);
+      }
+    }
+  }
+  .\*\:sm\:px-6 {
+    :is(& > *) {
+      @media (width >= 40rem) {
+        padding-inline: calc(var(--spacing) * 6);
+      }
+    }
+  }
+  .\*\:sm\:pl-6 {
+    :is(& > *) {
+      @media (width >= 40rem) {
+        padding-left: calc(var(--spacing) * 6);
+      }
+    }
+  }
+  .\*\:sm\:pl-12 {
+    :is(& > *) {
+      @media (width >= 40rem) {
+        padding-left: calc(var(--spacing) * 12);
+      }
     }
   }
   .\*\:sm\:transition-transform {
@@ -1068,6 +1470,11 @@
       justify-content: flex-start;
     }
   }
+  .lg\:grid-cols-2 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
   .lg\:grid-cols-3 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -1076,6 +1483,21 @@
   .lg\:grid-cols-\[2fr_3fr\] {
     @media (width >= 64rem) {
       grid-template-columns: 2fr 3fr;
+    }
+  }
+  .lg\:flex-row {
+    @media (width >= 64rem) {
+      flex-direction: row;
+    }
+  }
+  .lg\:p-6 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 6);
+    }
+  }
+  .lg\:p-8 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 8);
     }
   }
   .lg\:text-5xl {
@@ -1174,6 +1596,71 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-inset-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-inset-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-inset-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-ring-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ring-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-inset-ring-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-inset-ring-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
+@property --tw-ring-inset {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ring-offset-width {
+  syntax: "<length>";
+  inherits: false;
+  initial-value: 0px;
+}
+@property --tw-ring-offset-color {
+  syntax: "*";
+  inherits: false;
+  initial-value: #fff;
+}
+@property --tw-ring-offset-shadow {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0 0 #0000;
+}
 @property --tw-outline-style {
   syntax: "*";
   inherits: false;
@@ -1193,6 +1680,11 @@
   syntax: "*";
   inherits: false;
   initial-value: 1;
+}
+@property --tw-divide-y-reverse {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
@@ -1216,10 +1708,25 @@
       --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-tracking: initial;
+      --tw-shadow: 0 0 #0000;
+      --tw-shadow-color: initial;
+      --tw-shadow-alpha: 100%;
+      --tw-inset-shadow: 0 0 #0000;
+      --tw-inset-shadow-color: initial;
+      --tw-inset-shadow-alpha: 100%;
+      --tw-ring-color: initial;
+      --tw-ring-shadow: 0 0 #0000;
+      --tw-inset-ring-color: initial;
+      --tw-inset-ring-shadow: 0 0 #0000;
+      --tw-ring-inset: initial;
+      --tw-ring-offset-width: 0px;
+      --tw-ring-offset-color: #fff;
+      --tw-ring-offset-shadow: 0 0 #0000;
       --tw-outline-style: solid;
       --tw-scale-x: 1;
       --tw-scale-y: 1;
       --tw-scale-z: 1;
+      --tw-divide-y-reverse: 0;
     }
   }
 }
